@@ -3,5 +3,5 @@ DIST vmodels-heretic-1.4.2.zip 2464784 RMD160 823c675750e80fdeac9cdb75ebecdfb9b9
 DIST vmodels-hexen-1.4.2.zip 1683299 RMD160 a1b888e48201befc6a81ea2edae35a24871fd3c1 SHA1 754394e82b9cc8e9c33d5405bd055292ef5b9b62 SHA256 900f72f951bfe336da9b06974c50ff40560ebeea807a568747ae21c11ca02d19
 DIST vmodels-strife-1.4.2.zip 91158 RMD160 4a0fe0d8b8de05382a7bf64866a24c5082bede89 SHA1 c377a4aac2b0592465e80a871b19a91b69287319 SHA256 61327493252b425cb74248221c53d44913f35d517645c4f9a60fd9c339d386f1
 EBUILD vavoom-models-1.4.2.ebuild 1242 RMD160 cf37c0dbf4633d8f9c855db8763ea3ee7a956351 SHA1 4330243ceddffa941a95ead0344f82278f5a4dad SHA256 f7105ded9cd7e3011b5536ae433951fcc21ea0ffa5cae201f1ed51b103c0a822
-MISC ChangeLog 587 RMD160 2ba09fd120ac53e9a890d854766445b93100eafa SHA1 329afdc9af23d35d8911df205e5fba79207627f2 SHA256 ecd3793fec46225a85c68083432667d4e5c7a5f1780c6d7830a31eea2343fb08
-MISC metadata.xml 242 RMD160 35a32ad0603f467a9a510c60c8b573c8c1242eb7 SHA1 e7d6d8fbd6b0e7e68a247a2256984e612da4aa81 SHA256 69740bb42aa9e58b780a6b712df1ea519a99781e8cc7a613adcb2f9165870dcf
+MISC ChangeLog 708 RMD160 ee1ed007b77b4255af79913214f4afc2c0bbb5e4 SHA1 ea61962067ef7c4f054599cfaa95abdce3f567a9 SHA256 041ac477534f274c728a40887b911f8ab9870b0de2ddb545134a823c2c909bb1
+MISC metadata.xml 491 RMD160 bde14d47ac7d583dbe60783c05f7897d08f61499 SHA1 3df34604164e09d66a98211d333235c498a86253 SHA256 d3e396596dc998aaf06fc2f7ed032ec53a2dd2064c651e5f9423795f3d5a755b
