@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-  <herd></herd>
-  <longdescription lang="en">
-    MD2 3D models package for Vavoom
-</longdescription>
+	<herd>maintainer-wanted</herd>
+	<longdescription lang="en">
+		MD2 3D models package for Vavoom
+	</longdescription>
+	<use>
+		<flag name='doom'> Install Doom resources </flag>
+		<flag name='heretic'> Install Heretic resources </flag>
+		<flag name='hexen'> Install Hexen resources </flag>
+		<flag name='strife'> Install Strife resources </flag>
+	</use>
 </pkgmetadata>
 
